<resources>
    <string name="app_name">l3p6</string>
    <string name="textAuthor">Нетология. Университет интернет-профессий будущего</string>
    <string name="textPublished">30 July at 16:30</string>
    <string name="textContent">Привет, это новая Нетология! Когда-то Нетология начиналась с интенсивов по онлайн-маркетингу. Затем появились курсы по дизайну, разработке, аналитике и управлению. Мы растём сами и помогаем расти студентам: от новичков до уверенных профессионалов. Но самое важное остаётся с нами: мы верим, что в каждом уже есть сила, которая заставляет хотеть больше, целиться выше, бежать быстрее. Наша миссия — помочь встать на путь роста и начать цепочку перемен → http://netolo.gy/fyb</string>
    <string name="textLikes">14</string>
    <string name="textShares">15</string>
    <string name="textViews">58980</string>
</resources>