<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/indent"
    tools:context=".MainActivity"
    >


    <ImageView
        android:id="@+id/avatar"
        android:layout_width="@dimen/avatar_size"
        android:layout_height="@dimen/avatar_size"
        android:src="@drawable/_8pdn"
        app:layout_constraintBottom_toBottomOf="@id/barrierTop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/material_motion_easing_accelerated" />

    <TextView
        android:id="@+id/author"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/indent"
        android:ellipsize="end"
        android:singleLine="true"
        app:layout_constraintBottom_toTopOf="@id/published"
        app:layout_constraintEnd_toStartOf="@id/menu"
        app:layout_constraintStart_toEndOf="@id/avatar"
        app:layout_constraintTop_toTopOf="@id/avatar"
        app:layout_constraintVertical_chainStyle="packed"
        tools:text="@string/textAuthor"/>

    <TextView
        android:id="@+id/published"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/indent"
        app:layout_constraintBottom_toBottomOf="@id/avatar"
        app:layout_constraintStart_toEndOf="@id/avatar"
        app:layout_constraintTop_toBottomOf="@id/author"
        tools:text="@string/textPublished" />

    <ImageButton
        android:id="@+id/menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:contentDescription="@string/material_motion_easing_accelerated"
        android:src="@drawable/ic_baseline_more_vert_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrierTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="avatar,published,menu" />

    <TextView
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/indent"
        android:layout_marginTop="@dimen/indent"
        android:autoLink="web"
        app:layout_constraintTop_toBottomOf="@id/barrierTop"
        tools:text="@string/textContent" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="content" />


    <ImageButton
        android:id="@+id/likes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"

        android:src="@drawable/ic_baseline_favorite_border_24"
        app:layout_constraintStart_toStartOf="@id/content"
        app:layout_constraintTop_toBottomOf="@id/barrier2"
        app:tint="#999999"
        android:contentDescription="@string/material_motion_easing_accelerated" />

    <TextView
        android:id="@+id/textLikes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textLikes"
        android:textSize="18sp"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toEndOf="@id/likes"
        app:layout_constraintTop_toBottomOf="@id/barrier2" />


    <ImageButton
        android:id="@+id/shares"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:src="@drawable/ic_baseline_share_24"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toEndOf="@id/textLikes"
        app:layout_constraintTop_toBottomOf="@id/barrier2"
        android:contentDescription="@string/material_motion_easing_accelerated" />


    <TextView
        android:id="@+id/textShares"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textShares"
        android:textSize="18sp"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toEndOf="@id/shares"
        app:layout_constraintTop_toBottomOf="@id/barrier2" />


    <ImageButton
        android:id="@+id/views"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="66dp"
        android:background="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="@id/content"
        app:layout_constraintTop_toBottomOf="@id/barrier2"
        app:srcCompat="@drawable/ic_baseline_remove_red_eye_24"
        android:contentDescription="@string/material_motion_easing_accelerated" />

    <TextView
        android:id="@+id/textViews"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@id/content"
        app:layout_constraintTop_toBottomOf="@id/barrier2"
        android:text="@string/textViews" />

</androidx.constraintlayout.widget.ConstraintLayout>